<resources>
    <string name="app_name">remotePC</string>
    <string name="title_screen">Screen</string>
    <string name="title_keyboard">Keyboard</string>
    <string name="title_mouse">Mouse</string>
    <string name="title_files">Files</string>
    <string name="title_connection">Connection</string>
    <string name="title_lan">LAN</string>
    <string name="title_web">Web</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
