<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_keyboard"
            android:icon="@drawable/ic_keyboard_black_24dp"
            android:title="@string/title_keyboard"/>

    <item
            android:id="@+id/navigation_mouse"
            android:icon="@drawable/ic_mouse_black_24dp"
            android:title="@string/title_mouse"/>

    <item
            android:id="@+id/navigation_desktop"
            android:icon="@drawable/ic_desktop_windows_black_24dp"
            android:title="@string/title_screen"/>

    <item
            android:id="@+id/navigation_files"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/title_files"/>

    <item
            android:id="@+id/navigation_connection"
            android:icon="@drawable/ic_cast_black_24dp"
            android:title="@string/title_connection"/>

</menu>
